Fix spacing

--- a/_assets/css/main.css
+++ b/_assets/css/main.css
@@ -380,7 +380,7 @@ figcaption {
 
 .notice {
   position: relative;
-  padding: 20px 20px 20px 40px;
+  padding: 20px 40px;
   margin-top: 30px;
   margin-right: -20px;
   margin-left: -40px;
@@ -2703,6 +2703,16 @@ span + .entry-title {
 @media only screen and (min-width: 62.5em) {
   .entry-wrapper {
     max-width: 960px;
+  }
+}
+
+#home .entry-wrapper {
+  margin-bottom: 0;
+}
+
+@media only screen and (min-width: 48em) {
+  #home section.entry:last-child .entry-wrapper {
+    margin-bottom: 3em;
   }
 }
 
